src/App.module.css
@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');

.removeScrollbar {
    padding-left: calc(100vw - 100%);
    background-color: pink;
}

.background {
    background-image: url('./assets/pokemart_interior.png');
    background-size: cover;
    width: 100%;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

.container {
    margin-top: 50px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: max-content;
}

.header {
    background-color: white;
    padding: 20px;
    border: 5px solid black;
    width: 100%;
}

h1 {
    /* font-family: 'VT323', monospace; */
    font-family: 'Pixelify Sans', sans-serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
    font-size: 64px;
    letter-spacing: -0.1rem;
}

p {
    font-family: 'Pixelify Sans', sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-size: 24px;
    letter-spacing: -0.05rem;
}

.app {
    display: grid; /* grid or none */
    grid-template-columns: 1fr 1fr;
    gap: 20px;
    width: 100%;
}

/* #root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
} */

